--- a/index.html
+++ b/index.html
@@ -425,7 +425,7 @@
                                     <div id="ws-tools-links-<%= id %>" class="ws-tools-links"></div>
                                 </div>
                                 <div id="rtabs-<%= id %>-2">
-                                    <google-map api-key="AIzaSyAe7JGPA_miJHu6DCw1JvJT6jrNElRnwSs" latitude="37.77493" longitude="-122.41942" <%= typeof InstallTrigger === 'undefined' ? 'signed-in="true"' : '' %> version="3" libraries="places,geometry" map="{{map}}">
+                                    <google-map api-key="AIzaSyAe7JGPA_miJHu6DCw1JvJT6jrNElRnwSs" latitude="37.77493" longitude="-122.41942" version="3" libraries="places,geometry" map="{{map}}">
                                     </google-map>
                                     <paper-progress id="progress-<%= id %>"></paper-progress>
                                     <div id="radiogrp-<%= id %>">
