report a bug menu item

--- a/index.html
+++ b/index.html
@@ -245,6 +245,14 @@
                             Import requests...
                         </paper-item-body>
                     </paper-item>
+                    <paper-item separator>
+                    </paper-item>
+                    <paper-item id="app-menu-report-issue">
+                        <paper-item-body>
+                            <iron-icon icon="bug-report"></iron-icon>
+                            Report an issue
+                        </paper-item-body>
+                    </paper-item>
                 </paper-menu>
             </div>
         </paper-header-panel>
