--- a/index.html
+++ b/index.html
@@ -419,6 +419,9 @@
                             <div class="ws-url">
                                 <iron-autogrow-textarea id="ws-url-<%= id %>" rows="3" readonly></iron-autogrow-textarea>
                             </div>
+                            <div class="ws-url hidden">
+                                <iron-autogrow-textarea id="share-ws-url-<%= id %>" rows="3" readonly></iron-autogrow-textarea>
+                            </div>
                         </fieldset>
                         <fieldset class="ws-results-fs pure-u-1">
                             <template id="t-<%= id %>" is="dom-bind">
